Accessibility Fix - Change links to increase color contrast
Changed to a darker blue and semi bold, as well as added focus to the selector

--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h3,h4{font-weight:700;font-family:'Raleway',sans-serif}h3{line-height:110%;margi
 h4{font-size:1.125rem}h2{line-height:110%;margin-top:.25rem;font-size:1.625rem;font-family:'Raleway',sans-serif}
 h2.cta-h2{text-transform:uppercase;font-family:'Raleway',sans-serif}
 p{font-weight:500;font-size:1rem;font-family:'Open Sans',sans-serif}
-a{font-family:'Open Sans',sans-serif}/*! Base Typography *//*! Typography Helpers *//*!
+a,a:focus{font-family:'Open Sans',sans-serif;color:#0055a5;font-weight:500}
+/*! Base Typography *//*! Typography Helpers *//*!
 Section 1: Foundation
 *//*! Section 2: Content */div.content table thead,table tbody,table tfoot{border:0}
 .columns.view-all-link a.button.expand{margin-top:21px}.column.row.event-list-row hr{border:0;height:20px;width:90%;height:50px;padding:.5rem 0;-webkit-box-shadow:0 15px 15px -15px #dcdcdc;box-shadow:0 15px 15px -15px #dcdcdc;margin:-50px auto 10px}
